--- a/downloads.html
+++ b/downloads.html
@@ -62,7 +62,7 @@
 
         <div class="section-title">
           <h2 style="font-size:38px"> DOWNLOADS</h2>
-          <p> Download Predator Stormbreaker Kernel and Some other cool Stuff. Alternative host for Downloads - <a href="https://forum.xda-developers.com/redmi-note-7/development/10-predator-kernel-fast-battery-t4028105">XDA</a> You can check out NOTES in our Support Group for more downloads. </p>   </div>
+          <p> Download Predator Stormbreaker Kernel and Some other cool Stuff from here. Alternative host for Downloads - <a href="https://forum.xda-developers.com/redmi-note-7/development/10-predator-kernel-fast-battery-t4028105">XDA.</a> You can check out NOTES in our Support Group for more downloads. </p>   </div>
           
              <div class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-up">
           <img src="assets/img/download-2.svg" class="img-fluid justify-content-center" alt="">  </div>   
@@ -77,7 +77,7 @@
               <ul>
                 <li>✓ Only flash this version on ROMs which support newcam</li>
                 <li>✓ As Stable as the Oldcam build </li>
-                <li>✓ If Camera don't works after Flashing this kernel. Then, flash the oldcam version in custom recovery</li>
+                <li>✓ If Camera not working after Flashing this kernel variant. Then, dirty flash the oldcam version in custom recovery</li>
               </ul>
               <div class="btn-wrap">
                 <a href="https://sourceforge.net/projects/predatorkernel-lavender/files/" class="btn-buy">Download</a> </div> </div>  </div>
@@ -99,7 +99,7 @@
             <div class="box featured">
               <h3>EAS</h3>
               <ul>
-                <li>✓ Provides a Smooth UI interaction experience</li>
+                <li>✓ Provides a Smooth UI interaction experience. Experience butter touch UI with this build.</li>
                 <li>✓ Gives Descent battery backup for many users</li>
                 <li>✓ Best for Eas based ROMs & Some HMP based too </li>	
                 <li class="na">Recommended for Gaming</li>
@@ -181,7 +181,7 @@
                 <li>✓ Wanna want some cool Wallpapers/Images/Splashes</li>
                 <li>✓ Cool Images shared by Our Kernel lovers</li>
                 <li>✓ Credits To : 
-                <br> • <a href="https://t.me/jaack08">Jaack08</a> • <a href="https://t.me/bOrn_2_be_wiLD">BOrn_2_be_wiLD</a></br> • <a href="https://t.me/mybodynotyours">Mybodynotyours</a><br> • <a href="https://t.me/letsmakeandro">Letsmakeandro</a> <br> </li>
+                <br> • <a href="https://t.me/jaack08">Jaack08</a> <br> • <a href="https://t.me/bOrn_2_be_wiLD">BOrn_2_be_wiLD</a></br> • <a href="https://t.me/mybodynotyours">Mybodynotyours</a><br> • <a href="https://t.me/letsmakeandro">Letsmakeandro</a> <br> </li>
               </ul>
               <div class="btn-wrap">
                 <a href="https://drive.google.com/folderview?id=1-XkX2WlA_-M1TKR4dY55rzeIz8bsByDr" class="btn-buy">I Want</a>
