--- a/error404.html
+++ b/error404.html
@@ -2,18 +2,24 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Predator Stormbreaker Error 404 !!</title>
-  <link href='https://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="assets/css/error.css">
+  <title>Oof you lost bish !!</title>
+  <link href="https://fonts.googleapis.com/css?family=Tomorrow&display=swap" rel="stylesheet"><link rel="stylesheet" href="assets/css/error.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-.board
-  p#error error
-  p#code 404
+<div class="text">
+  <div>Successfully Hacked</div>
+  <h1>Data Received : 1.32GB of packets</h1>
+  <hr>
+  <div>There's no such module which will gib you 6969 Hours Battery Lyf.. 🤷🏻‍♂️ You are hacked now !!</div>
+</div>
+
+<div class="astronaut">
+  <img src="https://images.vexels.com/media/users/3/152639/isolated/preview/506b575739e90613428cdb399175e2c8-space-astronaut-cartoon-by-vexels.png" alt="" class="src">
+</div>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="assets/js/error.js"></script>
+  <script  src="assets/js/error.js"></script>
 
 </body>
 </html>
