--- a/error404.html
+++ b/error404.html
@@ -10,9 +10,10 @@
 <!-- partial:index.partial.html -->
 <div class="text">
   <div>Successfully Hacked</div>
-  <h1>Data Received : 1.32GB of packets</h1>
+  <h1>Data Collected : 1.32GB</h1>
   <hr>
-  <div>There's no such module which will gib you 6969 Hours Battery Lyf.. 🤷🏻‍♂️ You are hacked now !!</div>
+  <div>There's no such module which will gib you 6969 Hours Battery Lyf.. <br>
+  	🤷🏻‍♂️ You are hacked now !!<br> </div>
 </div>
 
 <div class="astronaut">
