--- a/error404.html
+++ b/error404.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Oof you lost bish !!</title>
-  <link href="https://fonts.googleapis.com/css?family=Tomorrow&display=swap" rel="stylesheet"><link rel="stylesheet" href="assets/css/error.css">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Oops bish u got lost !!</title>
 
-</head>
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
+
+	<!-- Custom stlylesheet -->
+	<link type="text/css" rel="stylesheet" href="assets/css/error.css" />
+
+	</head>
+
 <body>
-<!-- partial:index.partial.html -->
-<div class="text">
-  <div>Successfully Hacked</div>
-  <h1>Data Collected : 1.32GB</h1>
-  <hr>
-  <div>There's no such module which will gib you 6969 Hours Battery Lyf.. <br>
-  	🤷🏻‍♂️ You are hacked now !!<br> </div>
-</div>
 
-<div class="astronaut">
-  <img src="https://images.vexels.com/media/users/3/152639/isolated/preview/506b575739e90613428cdb399175e2c8-space-astronaut-cartoon-by-vexels.png" alt="" class="src">
-</div>
-<!-- partial -->
-  <script  src="assets/js/error.js"></script>
+	<div id="notfound">
+		<div class="notfound">
+			<div class="notfound-404">
+				<h1>You are trying to find which is not in existence!!</h1>
+			</div>
+			<h2>404 - Download Failed</h2>
+			<p>There's no such module which will give you 6969+ hours battery backup.</p>
+			<a href="index.html">Go To Homepage</a>
+		</div>
+	</div>
 
 </body>
 </html>
