--- a/error404.html
+++ b/error404.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +19,7 @@
 	<div id="notfound">
 		<div class="notfound">
 			<div class="notfound-404">
-				<h1>You are trying to find which is not in existence!!</h1>
+				<h1>Not In Existence!</h1>
 			</div>
 			<h2>404 - Download Failed</h2>
 			<p>There's no such module which will give you 6969+ hours battery backup.</p>
