--- a/error404.html
+++ b/error404.html
@@ -19,7 +19,7 @@
 	<div id="notfound">
 		<div class="notfound">
 			<div class="notfound-404">
-				<h1>Not In Existence!</h1>
+				<h1>Error 404!</h1>
 			</div>
 			<h2>404 - Download Failed</h2>
 			<p>There's no such module which will give you 6969+ hours battery backup.</p>
