--- a/error404.html
+++ b/error404.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Predator Stormbreaker Error 404 !!</title>
-  <link href='https://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="assets/css/error.css">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Oops bish u got lost !!</title>
 
-</head>
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
+
+	<!-- Custom stlylesheet -->
+	<link type="text/css" rel="stylesheet" href="assets/css/error.css" />
+
+	</head>
+
 <body>
-<!-- partial:index.partial.html -->
-.board
-  p#error error
-  p#code 404
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="assets/js/error.js"></script>
+
+	<div id="notfound">
+		<div class="notfound">
+			<div class="notfound-404">
+				<h1>Error 404!</h1>
+			</div>
+			<h2>404 - Download Failed</h2>
+			<p>There's no such module which will give you 6969+ hours battery backup.</p>
+			<a href="index.html">Go To Homepage</a>
+		</div>
+	</div>
 
 </body>
 </html>
