--- a/faqs.html
+++ b/faqs.html
@@ -123,7 +123,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-4" class="collapsed b">Which battery saving modules are safe to use with this Kernel?  <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-parent=".faq-list">
                 <p>
-                  Here is the Module for Best Battery Savings 🤩 You can flash it in Magisk manager and can Enjoy 11 Hours Screen On Time. This Module is created with love by @Rishabh25Chauhan -  <a href="error404.html" class="aline"> DOWNLOAD </a> by
+                  Here is the Module for Best Battery Savings 🤩 You can flash it in Magisk manager and can Enjoy 11 Hours Screen On Time. This Module is created with love by @Rishabh25Chauhan -  <a href="error404.html" class="aline"> DOWNLOAD </a>
                 </p>
               </div>
             </li>
