--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <img src="assets/img/about.png" class="img-fluid" alt="">
           </div>
     		
-    	<div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-up">
+    	<div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>How to flash ?</h3>    <ul>
               <li><i class="icofont-check-circled"></i> Choose (Oldcam or Newcam version) from - <a href="downloads.html"> HERE </a> </li>
               <li><i class="icofont-check-circled"></i> Download the zip file and Reboot to recovery.</li>
@@ -76,10 +76,10 @@
     </section><!-- End About Section -->
 
 <!-- ======= Services Section ======= -->
-    <section class="services" data-aos="zoom-in" data-aos-delay="100">
+    <section class="services" data-aos="zoom-in" data-aos-delay="70">
       <div class="container">
 
-       <div class="section-title" data-aos="zoom-in" data-aos-delay="100" >
+       <div class="section-title">
           <h2>Why to use Predator Stormbreaker Kernel?</h2>
           <p>We are getting a good response from most of our the users with every update. Not only this, but also many of the Official as well as Unofficial ROMs available for Lavender have Our Kernel as a Stock Kernel. We are Thankful 😃 to all those Devs. who considered us..</p>
         </div>
@@ -133,9 +133,9 @@
     	
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
 
-        <div class="section-title" data-aos="zoom-in" data-aos-delay="100">
+        <div class="section-title" data-aos="zoom-in" data-aos-delay="80">
           <h2>Features</h2>
           <p>This Kernel includes numerous features to achieve, What user's want. Here are some major Features we have included in Our Kernel to achieve a balance between good Performance and descent Battery backup.</p>
         </div>
