--- a/downloads.html
+++ b/downloads.html
@@ -100,7 +100,7 @@
               <h3>EAS</h3>
               <ul>
                 <li>✓ Provides a Smooth UI interaction experience. Experience butter touch UI with this build.</li>
-                <li>✓ Gives Descent battery backup for many users</li>
+                <li>✓ Gives decent battery backup for many users</li>
                 <li>✓ Best for Eas based ROMs & Some HMP based too </li>	
                 <li class="na">Recommended for Gaming</li>
               </ul>
