--- a/faqs.html
+++ b/faqs.html
@@ -268,7 +268,7 @@ How to fix Force Closing of Camera, When i flashed Predator Kernel on Miui witho
                 <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-14" class="collapse" data-parent=".faq-list">
                 <p>
-           At the moment, You should only use Predator Kernel along with the Patch provided in the <a href="downloads.html">Downloads</a> section. The Patch allows Camera, Wifi, Flashlight etc. to run properly in MIUI Android 10 with a custom Kernel. If you're using the Patch, then for sure U'll get fishy errors. So, 
+           At the moment, You should only use Predator Kernel along with the Patch provided in the <a href="downloads.html">Downloads</a> section. The Patch allows Camera, Wifi, Flashlight etc. to run properly in MIUI Android 10 with a custom Kernel. If you're not using the Patch, then for sure U'll get fishy errors. So, 
            	<p>&nbsp;</p>
            ✓ Flash the patch (If u haven't yet in Miui Android10) <br>
            ✓ If still you're facing the issue, then Dirty Flash your ROM. <br>
