--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">   <div class="container">   <div class="row">
     	
-          <div margin-top:"100px" class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="120">
+          <div margin-top:"100px" class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="100">
             <img src="assets/img/about.png" class="img-fluid" alt="">
           </div>
     		
@@ -76,7 +76,7 @@
     </section><!-- End About Section -->
 
 <!-- ======= Services Section ======= -->
-    <section class="services" data-aos="zoom-in" data-aos-delay="70">
+    <section class="services">
       <div class="container">
 
        <div class="section-title">
@@ -135,7 +135,7 @@
     <section id="features" class="features">
       <div class="container">
 
-        <div class="section-title" data-aos="zoom-in" data-aos-delay="80">
+        <div class="section-title">
           <h2>Features</h2>
           <p>This Kernel includes numerous features to achieve, What user's want. Here are some major Features we have included in Our Kernel to achieve a balance between good Performance and descent Battery backup.</p>
         </div>
